Validando datos paciente antes de ingresarlos a la tabla - add function exhibirMensajeErrores en form.js

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 			<!-- form addicionar paciente-->
 			<section class="container">
 				<h2 id="titulo-form">Adicionar nuevo paciente</h2>
-				<ul id="mensajes-errores"></ul>
-	
+				<ul id="mensajes-errores">
+				</ul>
 	
 				<form id="form-adicionar">
 					<div class="grupo">
