--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 		</main>
           
 		<script src="js/calculate-imc.js"></script>	
+		<script src="js/delete.js"></script>	
 		<script src="js/form.js"></script>	
 
 	</body>
