setTimeOut, fadeOut, remove works!

--- a/index.html
+++ b/index.html
@@ -87,11 +87,13 @@
 						</tr>
 					</tbody>
 				</table>
+				<h5>* Si deseas eliminar a un paciente de la tabla, da un click dentro de la fila deseada.</h5>
 
 			</section>
 
 			<!-- form addicionar paciente-->
 			<section class="container">
+				<br>
 				<h2 id="titulo-form">Adicionar nuevo paciente</h2>
 				<ul id="mensajes-errores">
 				</ul>
