filtering with regex works!

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
           
 		<script src="js/calculate-imc.js"></script>	
 		<script src="js/delete.js"></script>	
+		<script src="js/filter.js"></script>	
 		<script src="js/form.js"></script>	
 
 	</body>
