getting json data from the server

--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
 					</tbody>
 				</table>
 				<h5>* Si deseas eliminar a un paciente de la tabla, da un click dentro de la fila deseada.</h5>
-
+				<button id="buscar-paciente" class="boton bto-principal">
+					Buscar Pacientes
+				</button>
 			</section>
+
 
 			<!-- form addicionar paciente-->
 			<section class="container">
@@ -124,6 +127,7 @@
 		<script src="js/delete.js"></script>	
 		<script src="js/filter.js"></script>	
 		<script src="js/form.js"></script>	
+		<script src="js/search-with-ajax.js"></script>	
 
 	</body>
 
