adding error-ajax span

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 					</tbody>
 				</table>
 				<h5>* Si deseas eliminar a un paciente de la tabla, da un click dentro de la fila deseada.</h5>
+				<span id="error-ajax" class="invisible">Lo sentimos ... código 404 :Error al buscar los pacientes.</span>
+
 				<button id="buscar-paciente" class="boton bto-principal">
 					Buscar Pacientes
 				</button>
